--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-Hello World
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	
+	<title>Volk_Milit's visit card page</title>
+	
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<div id="main">		
+		<h1 class="header">Volk_Milit</h1>
+		<div class="header small">(aka Ja'Virr-Dar)</div>
+			
+		<div id="menu">
+			<ul>
+				<li><a href="tes3mp.html">tes3mp</a></li>
+				<li><a href="https://github.com/VolkMilit">github</a></li>
+				<li><a href="http://return-1.deviantart.com/">deviantart</a></li>
+				<li><a href="https://www.reddit.com/user/javirrdar/">reddit</a></li>
+				<li><a href="https://www.tumblr.com/blog/javirrdar">tumblr</a></li>
+				<li><a href="https://vk.com/volcharamilit">vkontakte</a></li>
+				<li><a href="https://steamcommunity.com/id/javirrdar/">steam</a></li>
+			</ul>
+		</div>
+		
+		<div id="home">
+			<div class="left">
+				Khajiit, gamer, <!--<span class="spoiler">(lazy)</span>--> programmer, geek.
+				<br>
+				tes3mp member. Check it out by link upside.
+				<br>
+				Create this page just for fan, actually.
+				<br><br>
+				If you want to contact me, better write to<br> steam or to <i>javirrdar at gmail dot com</i>.
+			</div>
+			<div class="right">
+				<img class="ava_img" src="ava.png">			
+			</div>
+			
+			<br>
+			<div class="other_content">
+				Miletus (/maɪˈliːtəs/; Ancient Greek: Μί̄λητος Mīlētos; Hittite transcription Millawanda or Milawata (exonyms); Latin: Miletus; Turkish: Milet) was an ancient Greek city on the western coast of Anatolia, near the mouth of the Maeander River in ancient Caria. [<a href="https://en.wikipedia.org/wiki/Miletus">wiki</a>]
+				<br>
+				<i>Just to point that my nickname is distorted Miletus and Wolf transliteration to Russian language.
+				<br><br>
+				Also Ja'Virr-Dar is there was no accident:</i><br>
+				<b>Ja</b> - Bachelor, young adult<br>
+				<b>Virr</b> - Just second name means nothing, like Ra'<i>Virr</i>. Actually I just stole that Virr from him ;)<br>
+				<b>Dar</b> - Thief, clever<br>
+				[<a href="http://www.uesp.net/wiki/Lore:Khajiit_Names">uesp.net</a>]
+			</div>
+			<br>
+			<a href="https://warandpeas.com/"><img class="small_img" src="https://linsedition.files.wordpress.com/2016/08/howl.jpg"></a><br>
+			<center>This pice of art not mine, I just like it. Check out this artist, just click to the image :)</center>
+		</div>
+	</div>
+	
+	<div id="footer">&copy; Volk_Milit, 2016<span id="footer_d"></span>, javirrdar at gmail dot com</div>
+</body>
+
+<script>
+	//footer
+	var d = new Date();
+	//dynamically generate current year
+	document.getElementById("footer_d").innerHTML = "-" + d.getFullYear() + "y";
+</script>
+
+</html>
