quick fix for links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 <!-- content container -->
 <div id="content">
-	<div id="header" class="center">Volk_Milit <div class="small">(aka Ja'Virr-Dar)</div></div>
+	<div id="header" class="center"><a href="https://volkmilit.github.io/">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
 	
 	<div id="menu">
 		<ul>
