--- a/tes3mp.html
+++ b/tes3mp.html
@@ -13,11 +13,11 @@
 	
 <!-- content container -->
 <div id="content">
-	<div id="header" class="center">Volk_Milit <div class="small">(aka Ja'Virr-Dar)</div></div>
+	<div id="header" class="center"><a href="https://volkmilit.github.io/">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
 	
 	<div id="menu">
 		<ul>
-			<li><a href="tes3mp.html">tes3mp</a></li>
+			<li><a href="index.html">home</a></li>
 			<li><a href="https://github.com/VolkMilit">github</a></li>
 			<li><a href="http://return-1.deviantart.com/">deviantart</a></li>
 			<li><a href="https://www.reddit.com/user/javirrdar/">reddit</a></li>
