fix broken link

--- a/tes3mp.html
+++ b/tes3mp.html
@@ -38,7 +38,7 @@
 					<li><a href="https://www.reddit.com/r/tes3mp/">(sub)reddit</a></li>
 					<li><a href="https://steamcommunity.com/groups/mwmulti">steam group</a></li>
 					<li><a href="https://vk.com/tes3mp">vkontakte group</a></li>
-					<li><a href="https://vk.com/tes3mp">everything you need to now about project</a></li>
+					<li><a href="https://steamcommunity.com/groups/mwmulti/discussions/1/353916184342480541/">everything you need to now about project</a></li>
 				</ul>
 		</td>
 		<td>
