I say, change picture in index.html T_T

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
 <title>Volk_Milit's visit-page</title>
 <link href="style.css" rel="stylesheet">
+<link rel="icon" href="icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
@@ -49,8 +50,8 @@
 	<b>Dar</b> - Thief, clever<br>
 	[<a href="http://www.uesp.net/wiki/Lore:Khajiit_Names">uesp.net</a>]</p>
 	
-	<div class="center"><a href="https://warandpeas.com/"><img class="resize" src="https://linsedition.files.wordpress.com/2016/08/howl.jpg"></a>
-	<br>This pice of art not mine, I just like it. Check out this artist, just click to the image :)</div>
+	<div class="center"><a href="https://javirrdar.tumblr.com/post/144498846738/the-dwemer-ruins-alphet-early-morning"><img class="resize" src="https://68.media.tumblr.com/d071eedbfb555024ea16b94e12bdd427/tumblr_o7bjizA0xH1v9w72ho1_1280.png"></a>
+	<br>My old(ish) screenshot. Kinda like it.</div>
 </div>
 <!-- /content container -->
 
