fix couple misspelling

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<td class="left">
 			<p>Khajiit, gamer, programmer, geek.<br>
 			tes3mp member. Check it out by link upside.<br>
-			Create this page just for fan, actually.<br>
+			Create this page just for fun, actually.<br>
 			If you want to contact me, better write to steam or to <i>javirrdar at gmail dot com</i>.</p>
 		</td>
 		<td>
