--- a/tes3mp.html
+++ b/tes3mp.html
@@ -6,6 +6,7 @@
 <head>
 <title>Volk_Milit's visit-page</title>
 <link href="style.css" rel="stylesheet">
+<link rel="icon" href="icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
@@ -30,7 +31,7 @@
 	<table><tr>
 		<td class="left">
 				<p class="indent">TES3MP is a project aiming to add multiplayer functionality to OpenMW, a free and open source recreation of the popular Bethesda Softworks' game "The Elder Scrolls III: Morrowind".</p>
-				<p class="indent">We started this project with Stanislav (Koncord) on summer 2016, and, well, I don't belive that project will shoot. But it is! And I very exciting.</p>
+				<p class="indent">We started this project with Stanislav (Koncord) on summer 2016, and, well, I don't belive that project will shoot. But it is! And I'm very exciting.</p>
 				
 				<p>Check the link below:</p>
 				<ul>
