--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-<title>Volk_Milit's visit-page</title>
+<title>Volk_Milit's persanal page</title>
 <link href="style.css" rel="stylesheet">
 <link rel="icon" href="icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -19,6 +19,7 @@
 	<div id="menu">
 		<ul>
 			<li><a href="tes3mp.html">tes3mp</a></li>
+			<li><a href="test-galery/test-1.html">stag</a></li>
 			<li><a href="https://github.com/VolkMilit">github</a></li>
 			<li><a href="http://return-1.deviantart.com/">deviantart</a></li>
 			<li><a href="https://www.reddit.com/user/javirrdar/">reddit</a></li>
