fix some mistyping

--- a/tes3mp.html
+++ b/tes3mp.html
@@ -31,7 +31,7 @@
 	<table><tr>
 		<td class="left">
 				<p class="indent">TES3MP is a project aiming to add multiplayer functionality to OpenMW, a free and open source recreation of the popular Bethesda Softworks' game "The Elder Scrolls III: Morrowind".</p>
-				<p class="indent">We started this project with Stanislav (Koncord) on summer 2016, and, well, I don't belive that project will shoot. But it is! And I'm very exciting.</p>
+				<p class="indent">We started this project with Stanislav (Koncord) on summer 2016, and, well, I don't belive that project will shoot. But it is!</p>
 				
 				<p>Check the link below:</p>
 				<ul>
@@ -39,7 +39,7 @@
 					<li><a href="https://www.reddit.com/r/tes3mp/">(sub)reddit</a></li>
 					<li><a href="https://steamcommunity.com/groups/mwmulti">steam group</a></li>
 					<li><a href="https://vk.com/tes3mp">vkontakte group</a></li>
-					<li><a href="https://steamcommunity.com/groups/mwmulti/discussions/1/353916184342480541/">everything you need to now about project</a></li>
+					<li><a href="https://steamcommunity.com/groups/mwmulti/discussions/1/353916184342480541/">everything you need to know about project</a></li>
 				</ul>
 		</td>
 		<td>
