fix and add some things

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			If you want to contact me, better write to steam or to <i>javirrdar at gmail dot com</i>.</p>
 		</td>
 		<td>
-			<img class="ava_img" src="ava.png">
+			<img class="ava_img" src="images/ava.png">
 		</td>
 	</tr></table>
 	
