--- a/tes3mp.html
+++ b/tes3mp.html
@@ -31,7 +31,7 @@
 	<table><tr>
 		<td class="left">
 				<p class="indent">TES3MP is a project aiming to add multiplayer functionality to OpenMW, a free and open source recreation of the popular Bethesda Softworks' game "The Elder Scrolls III: Morrowind".</p>
-				<p class="indent">We started this project with <a href="https://steamcommunity.com/id/koncord/">Stanislav (Koncord)</a> on summer 2016, and, well, I don't belive that project will shoot. But it is!</p>
+				<p class="indent">We started this project with <a href="http://steamcommunity.com/id/Konc0rd/">Stanislav (Koncord)</a> on summer 2016, and, well, I don't belive that project will shoot. But it is!</p>
 				
 				<p>Check the link below:</p>
 				<ul>
