--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
 	<table><tr>
 		<td class="left">
 			<p>Khajiit, gamer, programmer, geek.<br>
-			tes3mp member. Check it out by link upside.<br>
-			Create this page just for fun, actually.<br>
-			If you want to contact me, better write to steam or to <i>javirrdar at gmail dot com</i>.</p>
+			<a href="tes3mp.html">tes3mp</a> member. Check it out by link upside.<br>			
+			If you want to contact me, better write to <a href="https://steamcommunity.com/id/javirrdar/">Steam</a>, <a href="https://vk.com/volcharamilit">Vkontakte</a> or <a href="mailto:javirrdar@gmail.com"><i>javirrdar at gmail dot com</i></a>.</p>
+			<p><span class="spoiler">Nah, too many junk emails, so use social network. But I steel hate them.</span></p>
 		</td>
 		<td>
 			<img class="ava_img" src="images/ava.png">
 		</td>
 	</tr></table>
 	
-	<p class="indent quote">Miletus (/maɪˈliːtəs/; Ancient Greek: Μί̄λητος Mīlētos; Hittite transcription Millawanda or Milawata (exonyms); Latin: Miletus; Turkish: Milet) was an ancient Greek city on the western coast of Anatolia, near the mouth of the Maeander River in ancient Caria. [<a href="https://en.wikipedia.org/wiki/Miletus">wiki</a>]</p>
+	<!--<p class="indent quote">Miletus (/maɪˈliːtəs/; Ancient Greek: Μί̄λητος Mīlētos; Hittite transcription Millawanda or Milawata (exonyms); Latin: Miletus; Turkish: Milet) was an ancient Greek city on the western coast of Anatolia, near the mouth of the Maeander River in ancient Caria. [<a href="https://en.wikipedia.org/wiki/Miletus">wiki</a>]</p>
 	<p><i>Just to point that my nickname is distorted Miletus and Wolf transliteration to Russian language.</i></p>
 	
-	<p><i>Also Ja'Virr-Dar is there was no accident:</i></p>
+	<p><i>Also Ja'Virr-Dar is there was no accident:</i></p>-->
 	<p class="quote">
 	<b>Ja</b> - Bachelor, young adult<br>
-	<b>Virr</b> - <i>Just second name means nothing, like Ra'<i>Virr</i>. Actually I just stole that Virr from him ;)</i><br>
+	<b>Virr</b> - <i>Just second name means nothing, like Ra'<b>Virr</b>. Actually I just stole that <b>Virr</b> from him ;)</i><br>
 	<b>Dar</b> - Thief, clever<br>
-	[<a href="http://www.uesp.net/wiki/Lore:Khajiit_Names">uesp.net</a>]</p>
+	[<i><a href="http://www.uesp.net/wiki/Lore:Khajiit_Names">uesp.net</a></i>]</p>
 	
 	<div class="center"><a href="https://javirrdar.tumblr.com/post/144498846738/the-dwemer-ruins-alphet-early-morning"><img class="resize" src="https://68.media.tumblr.com/d071eedbfb555024ea16b94e12bdd427/tumblr_o7bjizA0xH1v9w72ho1_1280.png"></a>
 	<br>My old(ish) screenshot. Kinda like it.</div>
