another tes3mp video

--- a/tes3mp.html
+++ b/tes3mp.html
@@ -47,7 +47,14 @@
 		</td>
 	</tr></table>
 	
-	<div class="center"><div id="header">Check out this cool gameplay video!</div>Remember, that not all stuff works on this moment, mod still in heavy development.<br><iframe width="560" height="315" src="https://www.youtube.com/embed/3sYTVnWLBYs" frameborder="0" allowfullscreen></iframe></div>
+	<div class="center"><div id="header">Check out this cool gameplay video!</div>Remember, that not all stuff works on this moment, "mod" still in heavy development.
+	<table> <!-- Yeah, I know, I know, it's a bit (okay, alot outdated), but I'm too lazy to make up it with css -->
+	<th scope="col"><iframe width="560" height="315" src="https://www.youtube.com/embed/3sYTVnWLBYs" frameborder="0" allowfullscreen></iframe></th>
+	<th scope="col"><iframe width="560" height="315" src="https://www.youtube.com/embed/drlv_idkOUs" frameborder="0" allowfullscreen></iframe></th>
+	</table>
+	</div>
+	
+	
 </div>
 <!-- /content container -->
 
