fuck, I knew something wrong here!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<p>Khajiit, gamer, programmer, geek.<br>
 			<a href="tes3mp.html">tes3mp</a> member. Check it out by link upside.<br>			
 			If you want to contact me, better write to <a href="https://steamcommunity.com/id/javirrdar/">Steam</a>, <a href="https://vk.com/volcharamilit">Vkontakte</a> or <a href="mailto:javirrdar@gmail.com"><i>javirrdar at gmail dot com</i></a>.</p>
-			<p><span class="spoiler">Nah, too many junk emails, so use social network. But I steel hate them.</span></p>
+			<p><span class="spoiler">Nah, too many junk emails, so use social network. But I still hate them.</span></p>
 		</td>
 		<td>
 			<img class="ava_img" src="images/ava.png">
