--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <!-- /content container -->
 
-<div id="footer">&copy; 2016<span id="footer_d"></span> Volk_Milit, <a href='https://creativecommons.org/licenses/by-nc-sa/3.0/legalcode'>CC-NC-SA 3.0</a></div>
+<div id="footer">&copy; 2016<span id="footer_d"></span> Volk_Milit, <a href='https://creativecommons.org/licenses/by-sa/3.0/legalcode'>cc-by-sa 3.0</a></div>
 
 <script type="text/javascript">
 	//footer
