--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<div id="menu">
 		<ul>
 			<li><a href="tes3mp.html">tes3mp</a></li>
+			<li><a href="gallery/page-1.html">gallery</a></li>
 			<li><a href="https://github.com/VolkMilit">github</a></li>
 			<li><a href="http://return-1.deviantart.com/">deviantart</a></li>
 			<li><a href="https://www.reddit.com/user/javirrdar/">reddit</a></li>
