remove menu and fix font

--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
 	<div id="menu">
 		<ul>
 			<li><a href="tes3mp.html">tes3mp</a></li>
-			<li><a href="gallery/page-1.html">gallery</a></li>
-			<li><a href="https://github.com/VolkMilit">github</a></li>
-			<li><a href="http://return-1.deviantart.com/">deviantart</a></li>
-			<li><a href="https://www.reddit.com/user/javirrdar/">reddit</a></li>
-			<li><a href="https://www.tumblr.com/blog/javirrdar">tumblr</a></li>
-			<li><a href="https://vk.com/volcharamilit">vkontakte</a></li>
-			<li><a href="https://steamcommunity.com/id/javirrdar/">steam</a></li>
+			<li><a href="gallery/page-1.html">gallery</a></li>			
 		</ul>
 	</div>
 	
@@ -34,7 +28,8 @@
 			<p>Khajiit, gamer, programmer, geek.<br>
 			<a href="tes3mp.html">tes3mp</a> member. Check it out by link upside.<br>			
 			If you want to contact me, better write to <a href="https://steamcommunity.com/id/javirrdar/">Steam</a>, <a href="https://vk.com/volcharamilit">Vkontakte</a> or <a href="mailto:javirrdar@gmail.com"><i>javirrdar at gmail dot com</i></a>.</p>
-			<p><span class="spoiler">Nah, too many junk emails, so use social network. But I still hate them.</span></p>
+			<p>I'm also in <a href="https://github.com/VolkMilit">github</a> | <a href="http://return-1.deviantart.com/">deviantart</a> | <a href="https://www.reddit.com/user/javirrdar/">reddit</a> | <a href="https://www.tumblr.com/blog/javirrdar">tumblr</a>.</p>
+			<p>Actually I have too many junk on email every day, so better to contact with me in another way.</p>
 		</td>
 		<td>
 			<img class="ava_img" src="images/ava.png">
@@ -44,15 +39,15 @@
 	<!--<p class="indent quote">Miletus (/maɪˈliːtəs/; Ancient Greek: Μί̄λητος Mīlētos; Hittite transcription Millawanda or Milawata (exonyms); Latin: Miletus; Turkish: Milet) was an ancient Greek city on the western coast of Anatolia, near the mouth of the Maeander River in ancient Caria. [<a href="https://en.wikipedia.org/wiki/Miletus">wiki</a>]</p>
 	<p><i>Just to point that my nickname is distorted Miletus and Wolf transliteration to Russian language.</i></p>
 	
-	<p><i>Also Ja'Virr-Dar is there was no accident:</i></p>-->
+	<p><i>Also Ja'Virr-Dar is there was no accident:</i></p>
 	<p class="quote">
 	<b>Ja</b> - Bachelor, young adult<br>
 	<b>Virr</b> - <i>Just second name means nothing, like Ra'<b>Virr</b>. Actually I just stole that <b>Virr</b> from him ;)</i><br>
 	<b>Dar</b> - Thief, clever<br>
-	[<i><a href="http://www.uesp.net/wiki/Lore:Khajiit_Names">uesp.net</a></i>]</p>
+	[<i><a href="http://www.uesp.net/wiki/Lore:Khajiit_Names">uesp.net</a></i>]</p>-->
 	
 	<div class="center"><a href="https://javirrdar.tumblr.com/post/144498846738/the-dwemer-ruins-alphet-early-morning"><img class="resize" src="https://68.media.tumblr.com/d071eedbfb555024ea16b94e12bdd427/tumblr_o7bjizA0xH1v9w72ho1_1280.png"></a>
-	<br>My old(ish) screenshot. Kinda like it.</div>
+	<br>My old screenshot. Kinda like it.</div>
 </div>
 <!-- /content container -->
 
