--- a/tes3mp.html
+++ b/tes3mp.html
@@ -19,12 +19,7 @@
 	<div id="menu">
 		<ul>
 			<li><a href="index.html">home</a></li>
-			<li><a href="https://github.com/VolkMilit">github</a></li>
-			<li><a href="http://return-1.deviantart.com/">deviantart</a></li>
-			<li><a href="https://www.reddit.com/user/javirrdar/">reddit</a></li>
-			<li><a href="https://www.tumblr.com/blog/javirrdar">tumblr</a></li>
-			<li><a href="https://vk.com/volcharamilit">vkontakte</a></li>
-			<li><a href="https://steamcommunity.com/id/javirrdar/">steam</a></li>
+			<li><a href="gallery/page-1.html">gallery</a></li>
 		</ul>
 	</div>
 	
