fix and add many things

--- a/gallery/page-1.html
+++ b/gallery/page-1.html
@@ -5,8 +5,9 @@
 
 <head>
 <title>My cool gallery</title>
-<link href="../style.css" rel="stylesheet">
-<link href="../galery.css" rel="stylesheet">
+<link href="../assets/css/style.css" rel="stylesheet">
+<link href="../assets/css/galery.css" rel="stylesheet">
+<link href="../assets/css/menu.css" rel="stylesheet">
 <link rel="icon" href="../icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
@@ -17,7 +18,8 @@
 <div id="content">
 	<div id="header" class="center">Sta<span class="color_blue">G</span><div class="small">Static Gallery</div></div>
 	
-	<div id="menu">
+	<div class="ribbon"></div>
+	<div id="nav">
 		<ul>
 			<li><a href="../index.html">home</a></li>
 		</ul>
