--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <head>
 <title>Volk_Milit's persanal page</title>
-<link href="style.css" rel="stylesheet">
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="assets/css/menu.css" rel="stylesheet">
 <link rel="icon" href="icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
@@ -16,35 +17,36 @@
 <div id="content">
 	<div id="header" class="center"><a href="https://volkmilit.github.io/">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
 	
-	<div id="menu">
+	<div class="ribbon"></div>
+	<div id="nav">
+		<ul>
+			<li><a href="tes3mp.html">tes3mp</a></li>
+			<li><a href="gallery/page-1.html">gallery</a></li>
+			<li><a href="https://flmmo.ru">Freedom Land</a></li>
+		</ul>
+	</div>
+	
+	<!--<div id="menu">
 		<ul>
 			<li><a href="tes3mp.html">tes3mp</a></li>
 			<li><a href="gallery/page-1.html">gallery</a></li>			
 		</ul>
-	</div>
+	</div>-->
 	
-	<table><tr>
-		<td class="left">
-			<p>Khajiit, gamer, programmer, geek.<br>
-			<a href="tes3mp.html">tes3mp</a> member. Check it out by link upside.<br>			
-			If you want to contact me, better write to <a href="https://steamcommunity.com/id/javirrdar/">Steam</a>, <a href="https://vk.com/volcharamilit">Vkontakte</a> or <a href="mailto:javirrdar@gmail.com"><i>javirrdar at gmail dot com</i></a>.</p>
-			<p>I'm also in <a href="https://github.com/VolkMilit">github</a> | <a href="http://return-1.deviantart.com/">deviantart</a> | <a href="https://www.reddit.com/user/javirrdar/">reddit</a> | <a href="https://www.tumblr.com/blog/javirrdar">tumblr</a>.</p>
+	<div id="table">
+		<div>
+			<p>Khajiit, gamer, programmer, geek.</p>
+			<p><a href="tes3mp.html">tes3mp</a> member. Check it out by link upside.</p>
+			<p>If you want to contact me, better write to <a href="https://steamcommunity.com/id/javirrdar/">Steam</a>, <a href="https://vk.com/volcharamilit">Vkontakte</a> or <a href="mailto:javirrdar@gmail.com"><i>javirrdar at gmail dot com</i></a>.</p>
+			<p>I'm also in <a href="https://github.com/VolkMilit">github</a> | <a href="https://gitlab.com/VolkMilit">gitlab</a> | <a href="http://return-1.deviantart.com/">deviantart</a> | <a href="https://www.reddit.com/user/javirrdar/">reddit</a> | <a href="https://www.tumblr.com/blog/javirrdar">tumblr</a>.</p>
 			<p>Actually I have too many junk on email every day, so better to contact with me in another way.</p>
-		</td>
-		<td>
-			<img class="ava_img" src="images/ava.png">
-		</td>
-	</tr></table>
+		</div>
 	
-	<!--<p class="indent quote">Miletus (/maɪˈliːtəs/; Ancient Greek: Μί̄λητος Mīlētos; Hittite transcription Millawanda or Milawata (exonyms); Latin: Miletus; Turkish: Milet) was an ancient Greek city on the western coast of Anatolia, near the mouth of the Maeander River in ancient Caria. [<a href="https://en.wikipedia.org/wiki/Miletus">wiki</a>]</p>
-	<p><i>Just to point that my nickname is distorted Miletus and Wolf transliteration to Russian language.</i></p>
-	
-	<p><i>Also Ja'Virr-Dar is there was no accident:</i></p>
-	<p class="quote">
-	<b>Ja</b> - Bachelor, young adult<br>
-	<b>Virr</b> - <i>Just second name means nothing, like Ra'<b>Virr</b>. Actually I just stole that <b>Virr</b> from him ;)</i><br>
-	<b>Dar</b> - Thief, clever<br>
-	[<i><a href="http://www.uesp.net/wiki/Lore:Khajiit_Names">uesp.net</a></i>]</p>-->
+		<div class="row">
+			<img class="ava_img" src="assets/images/ava.jpg"><br>
+			<div class="smaller">Profile picture was gifted to me by <a href="https://vk.com/azumika">Natalia "AZUMIKA" Kudrina</a>.</div>
+		</div>
+	</div>
 	
 	<div class="center"><a href="https://javirrdar.tumblr.com/post/144498846738/the-dwemer-ruins-alphet-early-morning"><img class="resize" src="https://68.media.tumblr.com/d071eedbfb555024ea16b94e12bdd427/tumblr_o7bjizA0xH1v9w72ho1_1280.png"></a>
 	<br>My old screenshot. Kinda like it.</div>
