--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 <!-- content container -->
 <div id="content">
-	<div id="header" class="center"><a href="https://volkmilit.github.io/">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
+	<div id="header" class="center"><a href="index.html">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
 	
 	<div class="ribbon"></div>
 	<div id="nav">
@@ -34,7 +34,7 @@
 	</div>-->
 	
 	<div id="table">
-		<div>
+		<div class="row01">
 			<p>Khajiit, gamer, programmer, geek.</p>
 			<p><a href="tes3mp.html">tes3mp</a> member. Check it out by link upside.</p>
 			<p>If you want to contact me, better write to <a href="https://steamcommunity.com/id/javirrdar/">Steam</a>, <a href="https://vk.com/volcharamilit">Vkontakte</a> or <a href="mailto:javirrdar@gmail.com"><i>javirrdar at gmail dot com</i></a>.</p>
@@ -42,7 +42,7 @@
 			<p>Actually I have too many junk on email every day, so better to contact with me in another way.</p>
 		</div>
 	
-		<div class="row">
+		<div class="row02">
 			<img class="ava_img" src="assets/images/ava.jpg"><br>
 			<div class="smaller">Profile picture was gifted to me by <a href="https://vk.com/azumika">Natalia "AZUMIKA" Kudrina</a>.</div>
 		</div>
