--- a/tes3mp.html
+++ b/tes3mp.html
@@ -15,7 +15,7 @@
 	
 <!-- content container -->
 <div id="content">
-	<div id="header" class="center"><a href="https://volkmilit.github.io/">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
+	<div id="header" class="center"><a href="index.html">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
 	
 	<div class="ribbon"></div>
 	<div id="nav">
@@ -27,7 +27,7 @@
 	</div>
 	
 	<div id="table">
-		<div>
+		<div class="row01">
 			<p class="indent">TES3MP is a project aiming to add multiplayer functionality to OpenMW, a free and open source recreation of the popular Bethesda Softworks' game "The Elder Scrolls III: Morrowind".</p>
 			<p class="indent">We started this project with <a href="http://steamcommunity.com/id/Konc0rd/">Stanislav (Koncord)</a> on summer 2016, and, well, I don't believed that project will shoot. But it is!</p>
 				
@@ -41,7 +41,7 @@
 			</ul>
 		</div>
 		
-		<div class="row">
+		<div class="row02">
 			<img class="ava_img" src="assets/images/tes3mp.png">
 		</div>
 	</div>
