--- a/freedomland.html
+++ b/freedomland.html
@@ -1,1 +1,22 @@
-<meta http-equiv="refresh" content="0; url=https://volkmilit.gitlab.io/freedomland.html" />
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+   
+<html>
+
+<head>
+<title>Volk_Milit's personal page</title>
+<link href="assets/css/style.css" rel="stylesheet">
+<link rel="icon" href="icon.ico">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="refresh" content="0; url=https://volkmilit.gitlab.io" />
+</head>
+
+<body>
+
+<div id="content">
+    <center>You will be redirected to GitLab now.<br><br><a href="https://volkmilit.gitlab.io">Or click that link.</a></center>
+</div>
+
+</body>
+
+</html>
