--- a/index.html
+++ b/index.html
@@ -4,64 +4,18 @@
 <html>
 
 <head>
-<title>Volk_Milit's persanal page</title>
+<title>Volk_Milit's personal page</title>
 <link href="assets/css/style.css" rel="stylesheet">
-<link href="assets/css/menu.css" rel="stylesheet">
 <link rel="icon" href="icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="refresh" content="0; url=https://volkmilit.gitlab.io" />
 </head>
 
 <body>
-	
-<!-- content container -->
+
 <div id="content">
-	<div id="header" class="center"><a href="index.html">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
-	
-	<div class="ribbon"></div>
-	<div id="nav">
-		<ul>
-			<li><a href="tes3mp.html">tes3mp</a></li>
-			<li><a href="gallery/page-1.html">gallery</a></li>
-			<li><a href="https://flmmo.ru">Freedom Land</a></li>
-		</ul>
-	</div>
-	
-	<!--<div id="menu">
-		<ul>
-			<li><a href="tes3mp.html">tes3mp</a></li>
-			<li><a href="gallery/page-1.html">gallery</a></li>			
-		</ul>
-	</div>-->
-	
-	<div id="table">
-		<div class="row01">
-			<p>Khajiit, gamer, programmer, geek.</p>
-			<p><a href="tes3mp.html">tes3mp</a> member. Check it out by link upside.</p>
-			<p>If you want to contact me, better write to <a href="https://steamcommunity.com/id/javirrdar/">Steam</a>, <a href="https://vk.com/volcharamilit">Vkontakte</a> or <a href="mailto:javirrdar@gmail.com"><i>javirrdar at gmail dot com</i></a>.</p>
-			<p>I'm also in <a href="https://github.com/VolkMilit">github</a> | <a href="https://gitlab.com/VolkMilit">gitlab</a> | <a href="http://return-1.deviantart.com/">deviantart</a> | <a href="https://www.reddit.com/user/javirrdar/">reddit</a> | <a href="https://www.tumblr.com/blog/javirrdar">tumblr</a>.</p>
-			<p>Actually I have too many junk on email every day, so better to contact with me in another way.</p>
-		</div>
-	
-		<div class="row02">
-			<img class="ava_img" src="assets/images/ava.jpg"><br>
-			<div class="smaller">Profile picture was gifted to me by <a href="https://vk.com/azumika">Natalia "AZUMIKA" Kudrina</a>.</div>
-		</div>
-	</div>
-	
-	<div class="center"><a href="https://javirrdar.tumblr.com/post/144498846738/the-dwemer-ruins-alphet-early-morning"><img class="resize" src="https://68.media.tumblr.com/d071eedbfb555024ea16b94e12bdd427/tumblr_o7bjizA0xH1v9w72ho1_1280.png"></a>
-	<br>My old screenshot. Kinda like it.</div>
+    <center>You will be redirected to GitLab now.<br><br><a href="https://volkmilit.gitlab.io">Or click that link.</a></center>
 </div>
-<!-- /content container -->
-
-<div id="footer">&copy; 2016<span id="footer_d"></span> Volk_Milit, <a href='https://creativecommons.org/licenses/by-sa/3.0/legalcode'>cc-by-sa 3.0</a></div>
-
-<script type="text/javascript">
-	//footer
-	var d = new Date();
-	//dynamically generate current year
-	if( (d.getFullYear() != 2016) || (d.getFullYear < 2016) )
-		document.getElementById("footer_d").innerHTML = "-" + d.getFullYear();
-</script>
 
 </body>
 
