--- a/tes3mp.html
+++ b/tes3mp.html
@@ -4,72 +4,18 @@
 <html>
 
 <head>
-<title>Volk_Milit's persanal page</title>
+<title>Volk_Milit's personal page</title>
 <link href="assets/css/style.css" rel="stylesheet">
-<link href="assets/css/menu.css" rel="stylesheet">
 <link rel="icon" href="icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="refresh" content="0; url=https://volkmilit.gitlab.io" />
 </head>
 
 <body>
-	
-<!-- content container -->
+
 <div id="content">
-	<div id="header" class="center"><a href="index.html">Volk_Milit</a><div class="small">(aka Ja'Virr-Dar)</div></div>
-	
-	<div class="ribbon"></div>
-	<div id="nav">
-		<ul>
-			<li><a href="tes3mp.html">tes3mp</a></li>
-			<li><a href="gallery/page-1.html">gallery</a></li>
-			<li><a href="https://flmmo.ru">Freedom Land</a></li>
-		</ul>
-	</div>
-	
-	<div id="table">
-		<div class="row01">
-			<p class="indent">TES3MP is a project aiming to add multiplayer functionality to OpenMW, a free and open source recreation of the popular Bethesda Softworks' game "The Elder Scrolls III: Morrowind".</p>
-			<p class="indent">We started this project with <a href="http://steamcommunity.com/id/Konc0rd/">Stanislav (Koncord)</a> on summer 2016, and, well, I don't believed that project will shoot. But it is!</p>
-				
-			<p>Check the link below:</p>
-			<ul>
-				<li><a href="https://github.com/TES3MP">source code</a></li>
-				<li><a href="https://www.reddit.com/r/tes3mp/">(sub)reddit</a></li>
-				<li><a href="https://steamcommunity.com/groups/mwmulti">steam group</a></li>
-				<li><a href="https://vk.com/tes3mp">vkontakte group</a></li>
-				<li><a href="https://steamcommunity.com/groups/mwmulti/discussions/1/353916184342480541/">everything you need to know about project</a></li>
-			</ul>
-		</div>
-		
-		<div class="row02">
-			<img class="ava_img" src="assets/images/tes3mp.png">
-		</div>
-	</div>
-	
-	<br> 
-	
-	<div class="center">
-		<h2>Check out this cool gameplay video!</h2>
-		<p>Remember, that not all stuff works on this moment, still in heavy development.</p>
-		<div id="table">
-			<div class="row1"><iframe width="560" height="315" src="https://www.youtube.com/embed/vfh-FcxHSHA" frameborder="0" allowfullscreen></iframe></div>
-			<div class="row2"><iframe width="560" height="315" src="https://www.youtube.com/embed/drlv_idkOUs" frameborder="0" allowfullscreen></iframe></div>
-		</div>
-	</div>
-	
-	
+    <center>You will be redirected to GitLab now.<br><br><a href="https://volkmilit.gitlab.io">Or click that link.</a></center>
 </div>
-<!-- /content container -->
-
-<div id="footer">&copy; 2016<span id="footer_d"></span> Volk_Milit, <a href='https://creativecommons.org/licenses/by-sa/3.0/legalcode'>cc-by-sa 3.0</a></div>
-
-<script type="text/javascript">
-	//footer
-	var d = new Date();
-	//dynamically generate current year
-	if( (d.getFullYear() != 2016) || (d.getFullYear < 2016) )
-		document.getElementById("footer_d").innerHTML = "-" + d.getFullYear();
-</script>
 
 </body>
 
