--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <link href="assets/css/style.css" rel="stylesheet">
 <link rel="icon" href="icon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="refresh" content="0; url=https://volkmilit.gitlab.io" />
+<meta http-equiv="refresh" content="0; url=https://volkmilit.ru" />
 </head>
 
 <body>
 
 <div id="content">
-    <center>You will be redirected to GitLab now.<br><br><a href="https://volkmilit.gitlab.io">Or click that link.</a></center>
+    <center>You will be redirected to my actual website now.<br><br><a href="https://volkmilit.ru">Or click that link.</a></center>
 </div>
 
 </body>
